working before seeding

--- a/index.css
+++ b/index.css
@@ -1,19 +1,39 @@
 
 .over-all{
-  display: flex;
+  display: grid;
+  grid-template-columns: 66% 33%;
 }
- .wrapper {
+ #wrapper {
+/* width: 50%; */
+/* margin: 10px; */
+display: grid;
+grid-template-columns: 33% 33% 33%;
 
-margin: 100px;
 }
 
+#logo {
+  font-size: 75px;
+  text-align: center;
+  font-family: Bodoni;
+}
+
+.login {
+  text-align: center;
+  margin-top:100px;
+  font-size: 25px;
+}
 .detail{
-  margin: 100px;
+  margin: 10px;
 }
 
-.small-image {
+/* .small-image {
   height: auto;
   width: auto;
   max-width: 300px;
   max-height: 300px;
+  margin-top: 0px;
+} */
+
+.big-image{
+  width: 100%;
 }
